# smt-mantle

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pages.yml
docs/: ARCHITECTURE.md
docs/brand/: README.md
hackathons/: README.md
hackathons/bnb-ai-trading-agent/: BUIDL.md  README.md  integration_stub.py
hackathons/croo-agent/: BUIDL.md  README.md  integration_stub.py
hackathons/mantle-turing-test/: .gitignore  BUIDL.md  CRITERIA.md  README.md  SUBMISSION.md  agent_card.json  alert_bot.py  onchain.py
mantle/: .gitignore  BUIDL.md  README.md  agent_card.json  alert_bot.py  hardhat.config.js  integration_stub.py  onchain.py  package.json
smt/: __init__.py  daemon.py
smt/context/: __init__.py  global_context.py
smt/core/: __init__.py  execution.py  exit_cascade.py  experience.py  risk.py  tracker.py  trade_plan.py
smt/learning/: __init__.py  bandit.py  corpus.py  faithfulness.py  groundtruth.py  hierarchical.py  optimizer.py  reward.py  synthetic.py
smt/pairs/: __init__.py  ada.py  base.py  bnb.py  btc.py  doge.py  eth.py  ltc.py  sol.py  xrp.py
smt/personas/: __init__.py  base.py  flow.py  judge.py  onchain.py  regime.py  sentiment.py  technical.py  whale.py
smt_world/: README.md  app.js  index.html  style.css
tests/: test_daemon_smoke.py  test_dune_smoke.py  test_imports.py  test_learning_smoke.py  test_mantle_bridge_smoke.py  test_pairs_smoke.py  test_personas_smoke.py  test_validation_smoke.py
tests/qa/: README.md  epics.csv  generate_matrix.py  test_cases.csv  traceability.csv
(+13 files in other folders)
